# llm-lab

./: .dockerignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build_image_and_run_app.sh  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: index.md  modules.md
local_llm/: app.py
tests/: test_foo.py
